<resources>
    <string name="app_name">DaMovie</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="now_playing">Now Playing</string>
    <string name="upcoming">Upcoming</string>
    <string name="movie_details">Movie Details</string>
    <string name="movie_title">Title</string>
    <string name="movie_overview">Overview</string>
    <string name="movie_runtime">Runtime</string>
    <string name="img">img</string>
    <string name="movie_genre">Genre</string>
    <string name="movie_tagline">Tagline</string>
    <string name="movie_popularity">Popularity</string>
    <string name="movie_release_date">Release Date</string>
    <string name="movie_vote">Vote Count</string>
    <string name="movie_companies">Production Companies</string>
    <string name="damovie">DaMovie</string>
    <string name="person_name">Name</string>
    <string name="person_bio">Bio</string>
    <string name="person_birthday">Birthday</string>
    <string name="person_birthplace">Birthplace</string>
    <string name="person_popularity">Popularity</string>
    <string name="movie_cast">Cast</string>
    <string name="movie_trailer">Trailer Video</string>
    <string name="home">Home</string>
    <string name="movie_trending">Movies of the Day</string>
    <string name="movie_popular">Most Popular</string>
    <string name="movie_topRated">Top Rated</string>
</resources>