<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/personDetails_constraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.main.personDetails.PersonDetailsFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <com.flaviofaria.kenburnsview.KenBurnsView
                android:id="@+id/personDetails_backdrop_kenBurns"
                android:layout_width="wrap_content"
                android:layout_height="350dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/img"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/backgrounds/scenic"/>

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="-50dp"
                android:src="@drawable/card_movie_details"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/personDetails_backdrop_kenBurns"
                app:layout_constraintVertical_bias="1.0" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView3"
                android:layout_width="160dp"
                android:layout_height="160dp"
                app:cardBackgroundColor="@color/transparent"
                app:cardCornerRadius="8dp"
                app:layout_constraintBottom_toTopOf="@+id/imageView7"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/imageView7">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/personDetails_poster_imageView"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/img"
                        android:scaleType="centerCrop"
                        android:src="@drawable/glass"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/personDetails_name_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/nunito_bold"
                android:text="@string/person_name"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/cardView3"
                app:layout_constraintStart_toStartOf="@+id/cardView3"
                app:layout_constraintTop_toBottomOf="@+id/cardView3" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/nunito_bold"
                android:text="@string/person_bio"
                android:textColor="@color/light_white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/personDetails_name_textView" />

            <TextView
                android:id="@+id/personDetails_bio_textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="36dp"
                android:fontFamily="@font/nunito"
                android:text="@string/person_bio"
                android:textColor="@color/light_white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView8"
                app:layout_constraintTop_toTopOf="@+id/textView2" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/nunito_bold"
                android:text="@string/person_birthday"
                android:textColor="@color/light_white"
                app:layout_constraintStart_toStartOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/personDetails_bio_textView" />

            <TextView
                android:id="@+id/personDetails_birthday_textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito"
                android:text="@string/person_birthday"
                android:textColor="@color/light_white"
                app:layout_constraintBottom_toBottomOf="@+id/textView4"
                app:layout_constraintEnd_toEndOf="@+id/personDetails_bio_textView"
                app:layout_constraintStart_toStartOf="@+id/personDetails_bio_textView"
                app:layout_constraintTop_toTopOf="@+id/textView4" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/nunito_bold"
                android:text="@string/person_birthplace"
                android:textColor="@color/light_white"
                app:layout_constraintStart_toStartOf="@+id/textView4"
                app:layout_constraintTop_toBottomOf="@+id/personDetails_birthday_textView" />

            <TextView
                android:id="@+id/personDetails_birthplace_textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito"
                android:text="@string/person_birthplace"
                android:textColor="@color/light_white"
                app:layout_constraintBottom_toBottomOf="@+id/textView8"
                app:layout_constraintEnd_toEndOf="@+id/personDetails_birthday_textView"
                app:layout_constraintStart_toStartOf="@+id/personDetails_birthday_textView"
                app:layout_constraintTop_toTopOf="@+id/textView8" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/nunito_bold"
                android:text="@string/person_popularity"
                android:textColor="@color/light_white"
                app:layout_constraintStart_toStartOf="@+id/textView8"
                app:layout_constraintTop_toBottomOf="@+id/personDetails_birthplace_textView" />

            <TextView
                android:id="@+id/personDetails_popularity_textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito"
                android:text="@string/person_popularity"
                android:textColor="@color/light_white"
                app:layout_constraintBottom_toBottomOf="@+id/textView12"
                app:layout_constraintEnd_toEndOf="@+id/personDetails_birthplace_textView"
                app:layout_constraintStart_toStartOf="@+id/personDetails_birthplace_textView"
                app:layout_constraintTop_toTopOf="@+id/textView12" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>