<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/movieDetails_constraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.main.movieDetails.MovieDetailsFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.flaviofaria.kenburnsview.KenBurnsView
                android:id="@+id/movieDetails_backdrop_kenBurns"
                android:layout_width="wrap_content"
                android:layout_height="350dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/img"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/backgrounds/scenic" />

            <ImageView
                android:id="@+id/card_movie_details"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="-50dp"
                android:src="@drawable/card_movie_details"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movieDetails_backdrop_kenBurns" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="112dp"
                android:layout_height="168dp"
                app:cardBackgroundColor="@color/transparent"
                app:cardCornerRadius="8dp"
                app:layout_constraintBottom_toTopOf="@+id/card_movie_details"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/card_movie_details">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/movieDetails_poster_imageView"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/img"
                        android:scaleType="centerCrop"
                        android:src="@drawable/glass"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/movieDetails_title_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/nunito_bold"
                android:text="@string/movie_title"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="@+id/cardView"
                app:layout_constraintStart_toStartOf="@+id/cardView"
                app:layout_constraintTop_toBottomOf="@+id/cardView" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="48dp"
                android:layout_height="56dp"
                android:layout_marginEnd="36dp"
                android:src="@drawable/card_movie_rating"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/card_movie_details" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:layout_marginTop="8dp"
                android:src="@drawable/ic_baseline_star_rate_24"
                app:layout_constraintEnd_toEndOf="@+id/imageView4"
                app:layout_constraintStart_toStartOf="@+id/imageView4"
                app:layout_constraintTop_toTopOf="@+id/imageView4" />

            <TextView
                android:id="@+id/movieDetails_rating_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/nunito_bold"
                android:text="8.8"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/imageView4"
                app:layout_constraintStart_toStartOf="@+id/imageView4"
                app:layout_constraintTop_toBottomOf="@+id/imageView6" />

            <TextView
                android:id="@+id/movieDetails_genre_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="12sp"
                android:fontFamily="@font/nunito"
                android:text="@string/movie_genre"
                android:textColor="@color/light_white"
                app:layout_constraintEnd_toEndOf="@+id/movieDetails_title_textView"
                app:layout_constraintStart_toStartOf="@+id/movieDetails_title_textView"
                app:layout_constraintTop_toBottomOf="@+id/movieDetails_title_textView" />

            <TextView
                android:id="@+id/movieDetails_tagline_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/nunito_italic"
                android:text="@string/movie_tagline"
                android:textColor="@color/light_white"
                app:layout_constraintEnd_toEndOf="@+id/movieDetails_genre_textView"
                app:layout_constraintStart_toStartOf="@+id/movieDetails_genre_textView"
                app:layout_constraintTop_toBottomOf="@+id/movieDetails_genre_textView" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/nunito_bold"
                android:text="@string/movie_overview"
                android:textColor="@color/light_white"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movieDetails_tagline_textView" />

            <TextView
                android:id="@+id/movieDetails_overview_textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="36dp"
                android:fontFamily="@font/nunito"
                android:text="@string/movie_overview"
                android:textColor="@color/light_white"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView9"
                app:layout_constraintTop_toTopOf="@+id/textView5" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/nunito_bold"
                android:text="@string/movie_popularity"
                android:textColor="@color/light_white"
                app:layout_constraintStart_toStartOf="@+id/textView5"
                app:layout_constraintTop_toBottomOf="@+id/movieDetails_overview_textView" />

            <TextView
                android:id="@+id/movieDetails_popularity_textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito"
                android:text="@string/movie_popularity"
                android:textColor="@color/light_white"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@+id/textView7"
                app:layout_constraintEnd_toEndOf="@+id/movieDetails_overview_textView"
                app:layout_constraintStart_toStartOf="@+id/movieDetails_overview_textView"
                app:layout_constraintTop_toTopOf="@+id/textView7" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/nunito_bold"
                android:text="@string/movie_vote"
                android:textColor="@color/light_white"
                app:layout_constraintStart_toStartOf="@+id/textView7"
                app:layout_constraintTop_toBottomOf="@+id/movieDetails_popularity_textView" />

            <TextView
                android:id="@+id/movieDetails_vote_textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito"
                android:text="@string/movie_vote"
                android:textColor="@color/light_white"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@+id/textView11"
                app:layout_constraintEnd_toEndOf="@+id/movieDetails_popularity_textView"
                app:layout_constraintStart_toStartOf="@+id/movieDetails_popularity_textView"
                app:layout_constraintTop_toTopOf="@+id/textView11" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/nunito_bold"
                android:text="@string/movie_release_date"
                android:textColor="@color/light_white"
                app:layout_constraintStart_toStartOf="@+id/textView11"
                app:layout_constraintTop_toBottomOf="@+id/movieDetails_vote_textView" />

            <TextView
                android:id="@+id/movieDetails_releaseDate_textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito"
                android:text="@string/movie_release_date"
                android:textColor="@color/light_white"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@+id/textView9"
                app:layout_constraintEnd_toEndOf="@+id/movieDetails_vote_textView"
                app:layout_constraintStart_toStartOf="@+id/movieDetails_vote_textView"
                app:layout_constraintTop_toTopOf="@+id/textView9" />

            <View
                android:id="@+id/divider"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="24dp"
                android:background="@color/light_white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movieDetails_releaseDate_textView" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/nunito_bold"
                android:text="@string/movie_companies"
                android:textColor="@color/light_white"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/textView9"
                app:layout_constraintTop_toBottomOf="@+id/divider" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/movieDetails_company_recyclerView"
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="12dp"
                app:layout_constraintBottom_toBottomOf="@+id/card_movie_details"
                app:layout_constraintEnd_toEndOf="@+id/movieDetails_releaseDate_textView"
                app:layout_constraintStart_toStartOf="@+id/textView13"
                app:layout_constraintTop_toBottomOf="@+id/textView13" />

<!--            <View-->
<!--                android:id="@+id/divider2"-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="1dp"-->
<!--                android:layout_marginStart="24dp"-->
<!--                android:layout_marginTop="24dp"-->
<!--                android:layout_marginEnd="24dp"-->
<!--                android:background="@color/light_white"-->
<!--                app:layout_constraintEnd_toEndOf="parent"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintTop_toBottomOf="@+id/movieDetails_company_recyclerView" />-->

<!--            <TextView-->
<!--                android:id="@+id/textView"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginTop="24dp"-->
<!--                android:fontFamily="@font/nunito_bold"-->
<!--                android:text="@string/movie_cast"-->
<!--                android:textColor="@color/light_white"-->
<!--                android:textSize="18sp"-->
<!--                app:layout_constraintStart_toStartOf="@+id/textView13"-->
<!--                app:layout_constraintTop_toBottomOf="@+id/divider2" />-->

<!--            <androidx.recyclerview.widget.RecyclerView-->
<!--                android:id="@+id/movieDetails_cast_recyclerView"-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="124dp"-->
<!--                android:layout_marginTop="24dp"-->
<!--                android:layout_marginBottom="24dp"-->
<!--                app:layout_constraintBottom_toBottomOf="parent"-->
<!--                app:layout_constraintEnd_toEndOf="@+id/movieDetails_company_recyclerView"-->
<!--                app:layout_constraintStart_toStartOf="@+id/movieDetails_company_recyclerView"-->
<!--                app:layout_constraintTop_toBottomOf="@+id/textView" />-->

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>